# smuc

./: Cargo.toml  LICENSE  README.md  shell.nix
.github/workflows/: build.yaml
client/: Cargo.toml
client/src/: client.rs  main.rs
client/src/pages/: chat.rs  login.rs
server/: Cargo.toml
server/src/: handler.rs  main.rs
structs/: Cargo.toml
structs/src/: lib.rs
