[workspace]
members = [
  "client",
  "server"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Dongsu Han"]
description = "Simple Multi-User Chat"
edition = "2021"
license = "MIT"
repository = "https://github.com/dongsu8142/smuc"

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
structs = { path = "structs" }
