[workspace]
members = [
  "client",
  "server"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Dongsu Han"]
description = "Simple Multi-User Chat"
edition = "2024"
license = "MIT"
repository = "https://github.com/dongsu8142/smuc"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
structs = { path = "structs" }
