[package]
name = "smuc-client"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["tokio"] }
tokio.workspace = true
serde_json.workspace = true
structs.workspace = true
